--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <section>
         <div class="circle"></div>
         <header>
-            <a href="#" class="logo"><img src="images\logo.png" class="logo" alt=""></a>
+            <a href="#" class="logo"><img src="logo.png" class="logo" alt=""></a>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
@@ -21,21 +21,17 @@
         <div class="content">
             <div class="textBox">
                 <h2>It's not just Coffee<br>It's <span>Starbucks</span></h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias voluptatem culpa sequi amet aperiam incidunt eligendi nesciunt, at voluptates, dolorem eos consequatur magni quod optio?</p>
-                <a href="#">Learn More</a>
+                <p>Starbucks, a global coffee icon, crafts exceptional blends with a welcoming ambiance. From rich brews to cozy corners, it's a sip of comfort and community.</p>
+                <a href="https://www.starbucks.com/about-us/">About Us</a>
             </div>
             <div class="imgBox">
-                <img src="\images\img1.png" class="starbucks">
+                <img src="img1.png" class="starbucks">
             </div>
         </div>
-        
         <ul class="thumb">
-            <li><img src="\images\thumb1.png" onclick="imgSlider('images/img1.png');changeCircleColor('#017143')" alt=""></li>
-            <li><img src="\images\thumb2.png" onclick="imgSlider('images/img2.png');changeCircleColor('#d752b1')" alt=""></li>
-            <li><img src="\images\thumb3.png" onclick="imgSlider('images/img3.png');changeCircleColor('#eb7495')" alt=""></li>
-        </ul>
-        <ul class="sci">
-            <a href="#"><img src="\images\github.png" alt=""></a>
+            <li><img src="thumb1.png" onclick="imgSlider('img1.png');changeCircleColor('#017143')" alt=""></li>
+            <li><img src="thumb2.png" onclick="imgSlider('img2.png');changeCircleColor('#d752b1')" alt=""></li>
+            <li><img src="thumb3.png" onclick="imgSlider('img3.png');changeCircleColor('#eb7495')" alt=""></li>
         </ul>
     </section>
     <script type="text/javascript">
