--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
         <div class="circle"></div>
         <header>
             <a href="#" class="logo"><img src="logo.png" class="logo" alt=""></a>
-            <ul>
+            <div class="toggle" onclick="toggleMenu();"></div>
+            <ul class="navigation">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
                 <li><a href="#">What's New</a></li>
@@ -43,6 +44,38 @@
             const circle = document.querySelector('.circle');
             circle.style.background = color;
         }
+        function toggleMenu(){
+            var menuToggle = document.querySelector('.toggle');
+            var navigation = document.querySelector('.navigation');
+            menuToggle.classList.toggle('active');    
+            navigation.classList.toggle('active');
+        }
+        function changeCircleColor(color){
+    const circle = document.querySelector('.circle');
+    circle.style.background = color;
+
+    const span = document.querySelector('.textBox span');
+    span.style.color = color;
+}
+function imgSlider(anything){
+    const img = document.querySelector('.starbucks');
+    img.style.opacity = 0;
+    setTimeout(() => {
+        img.src = anything;
+        img.style.opacity = 1;
+    }, 500);
+}
+function imgSlider(anything){
+    const img = document.querySelector('.starbucks');
+    const text = document.querySelector('.textBox span');
+    img.style.opacity = 0;
+    text.style.opacity = 0;
+    setTimeout(() => {
+        img.src = anything;
+        img.style.opacity = 1;
+        text.style.opacity = 1;
+    }, 500);
+}
     </script>
 </body>
 </html>
